tests/valid/08_complex_expression.brl
eligible := ((income + savings) > debt) and ((age + 1) >= 18 or guardian);
print eligible;
