tests/invalid/11_malformed_operator.brl
check := age <> 18;
print check;
